just need to fix weird spacing

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -28,7 +28,6 @@
 
 #i > footer {
     height: 75px;
-    /* line-height: 75px; */
 }
 
 /* fixes height issue from calling footer inside of #i*/
@@ -39,7 +38,7 @@
 
 /*desktop view*/
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 960px) {
     div {
         float: left;
     }
@@ -50,5 +49,21 @@
     
     #i {
         float: right;
+    } 
+}
+
+/* table view */
+
+@media only screen and (min-width: 600px) and (max-width: 767px) {
+    div {
+        float: left;
+    }
+    
+    .square {
+        float: left;
+    } 
+    
+    #i {
+        float: left;
     } 
 }
